assets/css/style.css
/* Importing Caveat and Quattrocento Sans from Google Font*/
@import url('https://fonts.googleapis.com/css2?family=Quattrocento&family=Quattrocento+Sans&display=swap');

* {
    margin: 0;
    padding: 0;
    border: none;
}

body {
    font-family: Quattrocento-Sans, Helvetica, Arial, sans-serif;
    color: rgb(226, 223, 218);
    background-color: rgb(38, 38, 38);
}

header {
    position: fixed;
    width: 100%;
    background-color: rgba(38, 38, 38, 0.7);
    clear: both;
    z-index: 1;
}

/* Headings and Logo */

h1, h2 {
    font-family: Quattrocento, Garamond, "Times New Roman";
    text-transform: uppercase;
    letter-spacing: 4px;
    color: #f89e4f;
}

#logo {
    float: left;
    font-size: 325%;
    margin-left: 30px;
}

/* Navigation Links */

#menu {
    font-size: 100%;
    letter-spacing: 4px;
}

#menu, #logo {
    line-height: 75px;
}

#menu li {
    float: right;
    list-style-type: none;
    margin-right: 50px;
}

#menu a {
    text-decoration: none;
    color: inherit;
}

#menu a:hover {
    border-bottom: 1px solid #fff;
}

.active {
    border-bottom: 1px solid #fff;
}

/* Hero Image */

#hero-outer {
    height: 600px;
    width: 100%;
    overflow: hidden;
    position: relative;
    top: 75px;
}


#cover-text, #cover-text h2 {
    color: rgb(226, 223, 218);
}

#cover-text2, #cover-text2 h2 {
    color: rgb(38, 38, 38);
}

#hero-image {
    height: 600px;
    width: 100%;
    background: url('../images/akitabw.webp') no-repeat center center;
    
    /* animates zoom out effect on loading page */
    animation-name: hero-zoom;
    animation-duration: 8s;
    animation-fill-mode: backwards;
}

/* Zoom Level for hero image */

@keyframes hero-zoom {
    from{
        transform: scale(1.3)
    }
    to{
        transform: scale(1)
    }
}

/* Overlay text for Hero Image */

#cover-text {
    font-size: 200%;
    font-family: Quattrocento, Garamond, "Times New Roman";
    text-transform: uppercase;
    letter-spacing: 4px;
    text-align: center;
    width: 250px;
    height: 125px;
    padding: 15px 15px;
    background-color: rgba(38, 38, 38, .5);
    top: 50px;
    left: 100px;
    position: absolute;
}

#cover-text2 {
    font-size: 200%;
    font-family: Quattrocento, Garamond, "Times New Roman";
    text-transform: uppercase;
    letter-spacing: 4px;
    text-align: center;
    width: 100%;
    top: 450px;
    background-color: rgba(226, 223, 218, .5);
    position: absolute;
}

/* Story Content */

#story-content {
    width: 1200px;
    margin: 135px auto;
}


#raffle-content {
    width: 600px;
    margin: 135px auto;
} 


/* Story Content Text */

.text-content-right, .text-content-left {
    display: inline-block;
    vertical-align: top;
    width: 580px;
}

hr {
    border-top: 2px solid #f89e4f;
    width: 100%;
    margin: 5px 0;
}

.text-content-right a, .text-content-left a {
    text-decoration: none;
    color: rgb(226, 223, 218);
    font-weight: bold;
}

/* Story Content Image */

.img-content-right, .img-content-left {
    width: 520px;
    height: 520px;
    padding: 0 30px 60px;
    margin: 0 auto;
    display: inline-block;
    vertical-align: top;
    clear: both;
}

/* Movie Content */

.mov-content-right, .mov-content-left {
    width: 520px;
    height: auto;
    padding: 0 30px 60px;
    margin: 0 auto;
    display: inline-block;
    vertical-align: top;
    clear: both;
}

.mov-content-right iframe, .mov-content-left iframe {
    width: 520px;
    height: 293px;
    filter: none;
    padding: 0;
}

.text-content-right, .img-content-right, .mov-content-right {
    float: right;
}

.text-content-left, .img-content-left, .mov-content-left {
    float: left;
}

#hachiko-portrait-bg {
    background: url('../images/hachiko.webp') no-repeat center center;
}

#waiting-img-bg {
    background: url('../images/hachiko_waiting.webp') no-repeat center center;
}

#legacy-img-bg {
    background: url('../images/hachiko_legacy.webp') no-repeat center center;
}

#legacy-img-bg, #waiting-img-bg, #hachiko-portrait-bg {
    height: 100%;
    border-radius: 10%;
}

/* Google maps wrapper and iframe */

#statue-google-maps {
    width: 100%;
    text-align:center;
    display: inline-block;
}

iframe {
    width: 900px;
    height: 300px;
    margin: 0 auto;
    filter: grayscale(100%);
    padding-bottom: 60px;
    clear: both;
}

/* Social Network Links & Symbols (Awesomefont) in Footer */

.social-networks {
    text-align: center;
}

.social-networks > li {
    display: inline;
}

.social-networks i {
    font-size: 150%;
    margin: 10px;
    padding: 20px;
    color: #fff;
}

/* Raffle Form */

.form-labels {
    font-family: Quattrocento, Garamond, "Times New Roman";
    font-size: 160%;
}

.text-field, #comment-field {
    width: 90%;
    height: 25px;
    margin: 5px auto 15px;
    border: 5px solid rgb(226, 223, 218);
    border-radius: 5px;
    font-family: Quattrocento, Garamond, "Times New Roman";
    font-size: 120%;
    padding: 5px;
    display: block;
}

.radio_pets {
    transform: scale(2);
    margin: 15px;
}

#newsletter-box {
    transform: scale(2);
    margin: 15px;
}

#comment-field {
    height: 250px;
}

#enter-button, #reset-button {
    margin-top: 15px;
    border-radius: 5px;
    padding: 10px 15px;
    border: 3px solid #f89e4f;
    text-align: center;
    color: rgb(226, 223, 218);
    background-color: rgb(38, 38, 38);
    font-size: 140%;
    float: left;
}

#reset-button {
    float: right;
}

#enter-button:hover, #reset-button:hover {
    background-color: rgb(226, 223, 218);
    color: rgb(38, 38, 38);
}

/* Media queries Sizes 1250px-950px, 950px-650px, 650px-360px and 360px-280px */

/* For larger to medium size screens from 1250px wide and down */
@media screen and (max-width: 1250px) {
    #story-content {
        width: 90%;
        margin: 135px auto;
    }

    .text-content-right, .text-content-left, .img-content-left, .img-content-right, .mov-content-left, .mov-content-right {
        width: 45%;
        padding: 0%;
        margin-bottom: 60px;
    }

    .mov-content-right iframe, .mov-content-left iframe {
        width: 100%;
        height: 293px;
    }
}

/* For medium to low size screens from 950px wide and down */
@media screen and (max-width: 950px) {
    #story-content {
        margin: 180px auto;
    }
    
    #hero-outer {
        top: 120px;
        height: 450px;
    }

    #menu {
        clear: left;
        float: left;
        margin-left: 30px;
        margin-bottom: 20px;
        line-height: 25px;
    }

    #hero-image {
        height: 450px;
        background: url('../images/akitabw-small.webp') no-repeat center center;
    }

    #cover-text {
        left: 10px;
        top: 50px;
        font-size: 150%;
        width: 200px;
        height: 100px;
        padding: 10px;   
    }
    
    #cover-text2 {
        font-size: 125%;
        top: 350px;
    }

    .text-content-right, .img-content-right, .mov-content-right {
        float: left;
    }
    
    .text-content-left, .text-content-right, .img-content-left, .img-content-right, .mov-content-left, .mov-content-right {
        margin-left: 50%;
        transform: translateX(-50%);
        width: 525px;
    }

    .text-content-right, .text-content-left {
        height: auto;
    }

    iframe {
        width: 525px;
    }

    .mov-content-right iframe, .mov-content-left iframe {
        width: 520px;
        height: 293px;
    }
}

/* For low to very low size screens from 650px wide and down */
@media screen and (max-width: 650px) {
    
    #menu li {
        margin-right: 10px;
    }
    
    #raffle-content {
        width: 100%;
    }

    .text-content-right, .text-content-left, .img-content-right, .img-content-left, .mov-content-right, .mov-content-left {
        width: 300px;
    }

    .img-content-right, .img-content-left {
        height: 300px;
        padding: 0 30px;
    }

    #hachiko-portrait-bg {
        background: url('../images/hachiko-small.webp') no-repeat center center;
    }
    
    #waiting-img-bg {
        background: url('../images/hachiko_waiting-small.webp') no-repeat center center;
    }
    
    #legacy-img-bg {
        background: url('../images/hachiko_legacy-small.webp') no-repeat center center;
    }
    
    iframe {
        width: 350px;
    }

    .mov-content-right iframe, .mov-content-left iframe {
        width: 300px;
        height: 169px;
        padding: 0%;
    }
}

/* For miniscule size screens from 360px wide and down */
@media screen and (max-width: 360px) {
    #logo {
        margin-left: 10px;
    }   

    #menu {
        margin-left: 5px;
    }
    
    #menu li {
        margin-right: 5px;
        font-size: 85%;
    }
    
    #cover-text2 {
        font-size: 100%;
    }

    .text-content-left, .text-content-right, .img-content-left, .img-content-right, .mov-content-left, .mov-content-right {
        width: 250px;
        padding: 0 5px;
    }

    iframe {
        width: 250px;
    }

    .mov-content-right iframe, .mov-content-left iframe {
        width: 250px;
        height: 141px;
    }
    .text-content-left h2, .text-content-right h2 {
        font-size: 120%;
    }
}

